--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ logo {
 	min-height: 100vh;
 }
 
-/* .row {
+.row {
 	margin: 2em 1em;
 }
 
@@ -148,4 +148,4 @@ logo {
 	position: relative;
 	left: 30%;
 	margin: 4em 0;
-} */
+}
